<resources>
    <string name="app_name">信鸽</string>

    <string name="account_hint">账户</string>
    <string name="password">密码</string>
    <string name="sign_in">登录</string>
    <string name="sign_up"><u>立即注册</u></string>
    <string name="find_password"><u>忘记密码?</u></string>
    <string name="sign_up_">注册</string>
    <string name="register_hint_phone">请输入手机号</string>
    <string name="register_hint_password">请输入密码</string>
    <string name="register_password_twice">请确认密码</string>
    <string name="register_verification_code">请输入验证码</string>
    <string name="register_verification_get_code">获取</string>
    <string name="phone_number_cannot_be_empty">手机号不能为空</string>
    <string name="sign_up_error_5">手机号码格式不正确</string>
    <string name="sign_up_error_4">密码不能为空</string>
    <string name="sign_up_error_3">验证码错误</string>
    <string name="sign_up_error_1">两次密码不相同</string>
    <string name="reget">重新获取</string>
    <string name="sign_up_error_2">验证码不能为空</string>
    <string name="find_password_">找回密码</string>
    <string name="confirm"><u>确认</u></string>
    <string name="register_hint_password_new"><u>请输入新密码</u></string>
    <string name="fade_back">反馈</string>
    <string name="about_us">关于我们</string>
    <string name="account_safe">账户与安全</string>
    <string name="name">kobe</string>
    <string name="change_account">修改用户名</string>
    <string name="change_password">修改密码</string>
    <string name="email">邮箱</string>
    <string name="address">250746335@qq.com</string>
    <string name="open_source">开源地址</string>
    <string name="source_address">https://github.com/sealtalk/sealtalk-android</string>



</resources>
